Altering Widths and Alt Attributes

--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
@@ -29,7 +29,7 @@
           <h2>Images and Inspiration from yellow.beauty.com</h2>
         </div>
         <div class="left-honey">
-          <img src="images/face-mask-banner.jpg" alt="banner image">
+          <img src="images/face-mask-banner.jpg" alt="Sunshine Banner Image">
         </div>
       </section>
     </header>
@@ -77,11 +77,13 @@
               they were hooked and wanted to share this amazing ingredient and many others with the world. These two got together in 2007 and started this
               small skincare company in 2017 with the goal of making others feel good about their skin.</p>
             </div>
-            <div class="button">
-              <a href="https://yellowbeauty.com/pages/reviews" aria-label="Subscribe to Sunshine">Subscribe</a>
-            </div>
-            <div class="button">
-              <a href="https://yellowbeauty.com/pages/reviews" aria-label="Write a review">Reviews</a>
+            <div class="yellow-buttons">
+              <div class="button">
+                <a href="https://yellowbeauty.com/pages/reviews" aria-label="Subscribe to Sunshine">Subscribe</a>
+              </div>
+              <div class="button">
+                <a href="https://yellowbeauty.com/pages/reviews" aria-label="Write a review">Reviews</a>
+              </div>
             </div>
           </div>
         </section>
@@ -96,13 +98,13 @@
                 <p>James.norton@hotmail.com</p>
                 <p>613-927-4830</p>
               </div>
-              <img class="logo-small" src="images/sunshine-logo.svg" alt="sunshine logo">
+              <img class="logo-small" src="images/sunshine-logo.svg" alt="Sunshine Logo">
             </div>
             <div class="badges">
-              <img src="images/facebook.svg" alt="facebook logo">
-              <img src="images/instagram.svg" alt="instagram logo">
-              <img src="images/tiktok.svg" alt="tiktok logo">
-              <img src="images/twitter.svg" alt="twitter logo">
+              <img src="images/facebook.svg" alt="Facebook Logo">
+              <img src="images/instagram.svg" alt="Instagram Logo">
+              <img src="images/tiktok.svg" alt="Tiktok Logo">
+              <img src="images/twitter.svg" alt="Twitter Logo">
             </div>
           </div>
         </section>
