--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
@@ -38,7 +38,7 @@
           <div class="about-flex">
             <p>Sunshine is a small company which produces products for a fresh face. Founded in 2017 in hopes of helping those improve their skin care routine and achieve their skin goals they never thought possible. Sunshine is here for you, we are here to help you achieve your skin goals and boost your self confidence and serotonin. Find the benefits you need here from ingredients you’ll love.</p>
             <div class="about-set-div">
-              <img src="images/about-set.jpg" alt="Self care set Image">
+              <img src="images/about-set.jpg" alt="Self Care Set Image">
             </div>
           </div>
         </div>
