--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
     <link rel="stylesheet" href="https://use.typekit.net/pnd6spq.css">
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
@@ -25,7 +25,7 @@
       </section>
       <section class="banner-ocean">
         <div class="left-ocean">
-          <img src="images/ocean-drops.jpg" alt="banner image">
+          <img src="images/ocean-drops.jpg" alt="Ocean Drops Elixir Banner Image">
         </div>
         <div class="right-ocean">
           <h1>Ocean Drops</h1>
@@ -41,32 +41,32 @@
           <div class="product-grid">
             <article class="face-cream">
               <p>$24</p>
-              <img src="images/face-cream-vertical.jpg" alt="image of face cream">
+              <img src="images/face-cream-vertical.jpg" alt="Sunshine Face Cream Product">
               <h3>Hydrasun Face Cream</h3>
             </article>
             <article class="toner">
               <p>$31</p>
-              <img src="images/water-toner.jpg" alt="image of water toner">
+              <img src="images/water-toner.jpg" alt="Sunshine Water Toner Product">
               <h3>Rise & Sun Water Toner</h3>
             </article>
             <article class="elixir">
               <p>$45</p>
-              <img src="images/ocean-elixir.jpg" alt="image of ocean drops elixir">
+              <img src="images/ocean-elixir.jpg" alt="Sunshine Ocean Drops Elixir Product">
               <h3>Ocean Drops Facial Elixir</h3>
             </article>
             <article class="face-wash">
               <p>$29</p>
-              <img src="images/face-wash.jpg" alt="image of rain face wash">
+              <img src="images/face-wash.jpg" alt="Sunshine Rain Face Wash Product">
               <h3>Yellow Rain Face Wash</h3>
             </article>
             <article class="scrub">
               <p>$22</p>
-              <img src="images/scrub.jpg" alt="image of face scrub">
+              <img src="images/scrub.jpg" alt="Sunshine Face Scrub Product">
               <h3>Soft Sand Facial Scrub</h3>
             </article>
             <article class="mask">
               <p>$19</p>
-              <img src="images/face-mask.jpg" alt="image of face masks">
+              <img src="images/face-mask.jpg" alt="Sunshine Face Mask Product">
               <h3>Smooth Rays Face Mask</h3>
             </article>
           </div>
@@ -80,32 +80,32 @@
           <div class="accesories-grid">
             <article class="cloth">
               <p>$13</p>
-              <img src="images/face-cloth.jpg" alt="image of face cloth">
+              <img src="images/face-cloth.jpg" alt="Sunshine Yellow Face Cloth">
               <h3>Yellow Face Cloth</h3>
             </article>
             <article class="image of cotton pads">
               <p>$10</p>
-              <img src="images/cotton-pads.jpg" alt="image of cotton pads">
+              <img src="images/cotton-pads.jpg" alt="Sunshine Reusable Cotton Pads">
               <h3>Reusable Cotton Pads</h3>
             </article>
             <article class="key-chain">
               <p>$6</p>
-              <img src="images/key-chain.jpg" alt="image of key chain">
+              <img src="images/key-chain.jpg" alt="Sunshine Nature Key Chaine">
               <h3>Nature Key Chain</h3>
             </article>
             <article class="brush">
               <p>$9</p>
-              <img src="images/face-brush.jpg" alt="image of face mask brush">
+              <img src="images/face-brush.jpg" alt="Sunshine Face Mask Brush">
               <h3>Face Mask Brush</h3>
             </article>
             <article class="socks">
               <p>$10</p>
-              <img src="images/socks.jpg" alt="image of socks">
+              <img src="images/socks.jpg" alt="Sunshine Groovy Socks">
               <h3>Groovy Socks</h3>
             </article>
             <article class="bag">
               <p>$12</p>
-              <img src="images/bag.jpg" alt="image of tote bag">
+              <img src="images/bag.jpg" alt="Sunshine Tote Bag">
               <h3>Tote Bag</h3>
             </article>
           </div>
